# LanChat

./: .gitignore  CMakeLists.txt  ChatMessage.cpp  ChatMessage.h  Connection.h  ConnectionError.cpp  ConnectionError.h  IdentifyMessage.cpp  IdentifyMessage.h  IdentifyResponseMessage.cpp  IdentifyResponseMessage.h  LICENSE  Makefile  Message.cpp  Message.h  MessageCreator.cpp  MessageCreator.h  MessageWrapper.cpp  MessageWrapper.h  README.md  SocketConnection.cpp  SocketConnection.h  SocketConnectionError.cpp  SocketConnectionError.h  defines.h  helper_functions.cpp  helper_functions.h
client/: App.cpp  App.h  CLI.cpp  CLI.h  Command.cpp  Command.h  Network.cpp  Network.h  Session.cpp  Session.h  main.cpp
message/: Addressed.cpp  Addressed.h  AddressedResponseMessage.cpp  AddressedResponseMessage.h  CommandMessage.cpp  CommandMessage.h  DeliverMessage.cpp  DeliverMessage.h  IdentifyCommandMessage.cpp  IdentifyCommandMessage.h  IdentifyMessage.cpp  IdentifyMessage.h  Message.cpp  Message.h  MessageVisitor.cpp  MessageVisitor.h  Readable.cpp  Readable.h  ReadableMessageBody.cpp  ReadableMessageBody.h  ResponseMessage.cpp  ResponseMessage.h  SendMessage.cpp  SendMessage.h  Signed.cpp  Signed.h
message/visitors/: IMessageVisitor.h
server/: Auth.cpp  Auth.h  BasicAuth.cpp  BasicAuth.h  BasicChat.cpp  BasicChat.h  Chat.cpp  Chat.h  CommandProcessor.h  Connection.cpp  Connection.h  ConnectionException.cpp  ConnectionException.h  FileLogger.cpp  FileLogger.h  Logger.h  LoggerComposite.cpp  LoggerComposite.h  LoggerProxy.cpp  LoggerProxy.h  Server.cpp  Server.h  Session.cpp  Session.h  SocketConnection.cpp  SocketConnection.h  SocketConnectionError.cpp  SocketConnectionError.h  StdOstreamLogger.cpp  StdOstreamLogger.h  main.cpp
server/visitors/: MessageRelayVisitor.cpp  MessageRelayVisitor.h
tests/: AddressedResponseMessageTest.cpp  ChatMessageTest.cpp  IdentifyMessageTest.cpp  IdentifyResponseMessageTest.cpp  MessageWrapperTest.cpp  ReadableTest.cpp  ResponseMessageTest.cpp  SendMessageTest.cpp
tests/SessionTest/: DummyNetwork.cpp  DummyNetwork.h  SessionTest.cpp  TestConnection.cpp  TestConnection.h
